// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreflightCheck click on section title open correct section: opened connectors section 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 66.66666666666667%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.20641 2.70856C8.13476 2.75156 8.0631 2.76589 7.99145 2.76589C7.86246 2.76589 7.73348 2.69423 7.6475 2.57958C7.51852 2.36462 7.36087 2.17831 7.20323 1.992C7.04559 1.83436 7.05992 1.5764 7.21756 1.43309C7.3752 1.27544 7.63317 1.28978 7.77648 1.44742C7.97711 1.66239 8.16342 1.90602 8.32106 2.16398C8.45004 2.35028 8.39272 2.59392 8.20641 2.70856Z"
              />
              <path
                d="M5.98739 7.8679C6.56064 7.60994 7.07656 7.223 7.44917 6.7214C7.57815 6.54943 7.83611 6.50644 8.00809 6.64975C8.18006 6.77873 8.22306 7.03669 8.07974 7.20866C7.62115 7.81057 7.0049 8.29784 6.30268 8.61312C6.24535 8.64178 6.20236 8.64178 6.14503 8.64178C5.98739 8.64178 5.84408 8.5558 5.77242 8.39815C5.68643 8.19752 5.78675 7.95389 5.98739 7.8679Z"
              />
              <path
                d="M8.07816 5.40317C8.20714 4.93024 8.22147 4.42864 8.16415 3.95571C8.13548 3.74075 8.2788 3.54011 8.5081 3.51145C8.72306 3.48278 8.9237 3.6261 8.95236 3.8554C9.03835 4.44297 9.00969 5.03055 8.85204 5.61813C8.80905 5.80444 8.63708 5.91909 8.4651 5.91909C8.43644 5.91909 8.39345 5.91909 8.36478 5.90476C8.14982 5.8331 8.02083 5.61813 8.07816 5.40317Z"
              />
              <path
                d="M5.74837 0.857647C5.6886 0.652472 5.80647 0.437689 6.01165 0.377916C6.21683 0.318143 6.43161 0.436016 6.49138 0.641192C6.55115 0.846367 6.43328 1.06115 6.22811 1.12092C6.02293 1.1807 5.80815 1.06282 5.74837 0.857647Z"
              />
              <path
                d="M4.52451 0C4.73948 0 4.92578 0.171974 4.92578 0.401274C4.92578 0.616242 4.75381 0.802547 4.52451 0.802547C2.48948 0.802547 0.827058 2.46497 0.827058 4.5C0.827058 4.88694 0.884382 5.27388 1.01336 5.66082C1.08502 5.87579 0.97037 6.09076 0.755402 6.16242C0.712409 6.17675 0.669415 6.17675 0.626421 6.17675C0.454447 6.17675 0.296803 6.07643 0.25381 5.90445C0.0961666 5.44586 0.0245099 4.97293 0.0245099 4.5C0.0245099 2.0207 2.04521 0 4.52451 0Z"
              />
              <path
                d="M1.80158 6.99381C2.50381 7.75336 3.49266 8.19763 4.52451 8.19763C4.73948 8.19763 4.92578 8.3696 4.92578 8.5989C4.92578 8.81387 4.75381 9.00017 4.52451 9.00017C3.27769 9.00017 2.05954 8.46992 1.214 7.53839C1.07069 7.38075 1.07069 7.12279 1.24266 6.97947C1.40031 6.82183 1.64394 6.83616 1.80158 6.99381Z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/Connector1"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        Connector1
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/Connector1"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        Connector1
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              in progress
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerInProgress"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.skipCheckBtn
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main footerSmallText"
      >
        pre-flight-check.skipCheckInfo
      </p>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck click on section title open correct section: opened pipeline inputs section 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 66.66666666666667%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.20641 2.70856C8.13476 2.75156 8.0631 2.76589 7.99145 2.76589C7.86246 2.76589 7.73348 2.69423 7.6475 2.57958C7.51852 2.36462 7.36087 2.17831 7.20323 1.992C7.04559 1.83436 7.05992 1.5764 7.21756 1.43309C7.3752 1.27544 7.63317 1.28978 7.77648 1.44742C7.97711 1.66239 8.16342 1.90602 8.32106 2.16398C8.45004 2.35028 8.39272 2.59392 8.20641 2.70856Z"
              />
              <path
                d="M5.98739 7.8679C6.56064 7.60994 7.07656 7.223 7.44917 6.7214C7.57815 6.54943 7.83611 6.50644 8.00809 6.64975C8.18006 6.77873 8.22306 7.03669 8.07974 7.20866C7.62115 7.81057 7.0049 8.29784 6.30268 8.61312C6.24535 8.64178 6.20236 8.64178 6.14503 8.64178C5.98739 8.64178 5.84408 8.5558 5.77242 8.39815C5.68643 8.19752 5.78675 7.95389 5.98739 7.8679Z"
              />
              <path
                d="M8.07816 5.40317C8.20714 4.93024 8.22147 4.42864 8.16415 3.95571C8.13548 3.74075 8.2788 3.54011 8.5081 3.51145C8.72306 3.48278 8.9237 3.6261 8.95236 3.8554C9.03835 4.44297 9.00969 5.03055 8.85204 5.61813C8.80905 5.80444 8.63708 5.91909 8.4651 5.91909C8.43644 5.91909 8.39345 5.91909 8.36478 5.90476C8.14982 5.8331 8.02083 5.61813 8.07816 5.40317Z"
              />
              <path
                d="M5.74837 0.857647C5.6886 0.652472 5.80647 0.437689 6.01165 0.377916C6.21683 0.318143 6.43161 0.436016 6.49138 0.641192C6.55115 0.846367 6.43328 1.06115 6.22811 1.12092C6.02293 1.1807 5.80815 1.06282 5.74837 0.857647Z"
              />
              <path
                d="M4.52451 0C4.73948 0 4.92578 0.171974 4.92578 0.401274C4.92578 0.616242 4.75381 0.802547 4.52451 0.802547C2.48948 0.802547 0.827058 2.46497 0.827058 4.5C0.827058 4.88694 0.884382 5.27388 1.01336 5.66082C1.08502 5.87579 0.97037 6.09076 0.755402 6.16242C0.712409 6.17675 0.669415 6.17675 0.626421 6.17675C0.454447 6.17675 0.296803 6.07643 0.25381 5.90445C0.0961666 5.44586 0.0245099 4.97293 0.0245099 4.5C0.0245099 2.0207 2.04521 0 4.52451 0Z"
              />
              <path
                d="M1.80158 6.99381C2.50381 7.75336 3.49266 8.19763 4.52451 8.19763C4.73948 8.19763 4.92578 8.3696 4.92578 8.5989C4.92578 8.81387 4.75381 9.00017 4.52451 9.00017C3.27769 9.00017 2.05954 8.46992 1.214 7.53839C1.07069 7.38075 1.07069 7.12279 1.24266 6.97947C1.40031 6.82183 1.64394 6.83616 1.80158 6.99381Z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              test.steps.step1.url
            </p>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerInProgress"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.skipCheckBtn
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main footerSmallText"
      >
        pre-flight-check.skipCheckInfo
      </p>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck renders property when has failed checks: after opening the error panel 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
      <span
        class="error"
      >
        pre-flight-check.errorFoundCounter
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-danger"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-cross StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            icon="small-cross"
          >
            <svg
              data-icon="small-cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-cross
              </desc>
              <path
                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-cross StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            icon="small-cross"
          >
            <svg
              data-icon="small-cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-cross
              </desc>
              <path
                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              account.testconttlshanf
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/testconttlshanf"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        account.testconttlshanf
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Accordion--accordion"
          >
            <div
              class="Accordion--panel"
              data-open="true"
              data-testid="org.orgConnectorId-panel"
            >
              <div
                class="Accordion--summary"
                data-testid="org.orgConnectorId-summary"
              >
                <div
                  class=""
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                      style="--text-line-clamp: 1;"
                    >
                      org.orgConnectorId
                    </p>
                    <span
                      class="connectorId"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="connectorIdentifierHolder"
                            tabindex="0"
                          >
                            <span>
                               
                              idLabel
                            </span>
                            <a
                              href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/orgConnectorId"
                              target="_blank"
                            >
                              <p
                                class="StyledProps--font StyledProps--main connectorIdentifier"
                              >
                                 
                                org.orgConnectorId
                              </p>
                            </a>
                          </div>
                        </span>
                      </span>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main status StyledProps--inline"
                      style="display: inline-flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
                        icon="dot"
                      >
                        <svg
                          data-icon="dot"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            dot
                          </desc>
                          <path
                            d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      failure
                    </span>
                  </div>
                </div>
                <div
                  class="Accordion--chevron"
                />
              </div>
              <div
                class="bp3-collapse Accordion--collapse"
                style="height: 0px;"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(0);"
                >
                  <div
                    class="Accordion--details"
                    data-testid="org.orgConnectorId-details"
                  >
                    <div
                      class="StyledProps--font StyledProps--main errorPanel"
                    >
                      <h3>
                        errorSummaryText
                      </h3>
                      <div
                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          Summary
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          Description
                        </p>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pre-flight-check.possibleCauses
                        </p>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          Connector not reachable
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Accordion--accordion"
          >
            <div
              class="Accordion--panel"
              data-open="false"
              data-testid="projectConnectorId-panel"
            >
              <div
                class="Accordion--summary"
                data-testid="projectConnectorId-summary"
              >
                <div
                  class=""
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                      style="--text-line-clamp: 1;"
                    >
                      projectConnectorId
                    </p>
                    <span
                      class="connectorId"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="connectorIdentifierHolder"
                            tabindex="0"
                          >
                            <span>
                               
                              idLabel
                            </span>
                            <a
                              href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/projectConnectorId"
                              target="_blank"
                            >
                              <p
                                class="StyledProps--font StyledProps--main connectorIdentifier"
                              >
                                 
                                projectConnectorId
                              </p>
                            </a>
                          </div>
                        </span>
                      </span>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main status StyledProps--inline"
                      style="display: inline-flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
                        icon="dot"
                      >
                        <svg
                          data-icon="dot"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            dot
                          </desc>
                          <path
                            d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      failure
                    </span>
                  </div>
                </div>
                <div
                  class="Accordion--chevron"
                />
              </div>
              <div
                class="bp3-collapse Accordion--collapse"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(-undefinedpx);"
                />
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/Connector1"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        Connector1
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerFailure"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          retry
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          close
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.continueToRunPipeline
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck renders property when has failed checks: before opening the error description panel 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
      <span
        class="error"
      >
        pre-flight-check.errorFoundCounter
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-danger"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-cross StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            icon="small-cross"
          >
            <svg
              data-icon="small-cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-cross
              </desc>
              <path
                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-cross StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
            icon="small-cross"
          >
            <svg
              data-icon="small-cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-cross
              </desc>
              <path
                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              account.testconttlshanf
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/testconttlshanf"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        account.testconttlshanf
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Accordion--accordion"
          >
            <div
              class="Accordion--panel"
              data-open="false"
              data-testid="org.orgConnectorId-panel"
            >
              <div
                class="Accordion--summary"
                data-testid="org.orgConnectorId-summary"
              >
                <div
                  class=""
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                      style="--text-line-clamp: 1;"
                    >
                      org.orgConnectorId
                    </p>
                    <span
                      class="connectorId"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="connectorIdentifierHolder"
                            tabindex="0"
                          >
                            <span>
                               
                              idLabel
                            </span>
                            <a
                              href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/orgConnectorId"
                              target="_blank"
                            >
                              <p
                                class="StyledProps--font StyledProps--main connectorIdentifier"
                              >
                                 
                                org.orgConnectorId
                              </p>
                            </a>
                          </div>
                        </span>
                      </span>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main status StyledProps--inline"
                      style="display: inline-flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
                        icon="dot"
                      >
                        <svg
                          data-icon="dot"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            dot
                          </desc>
                          <path
                            d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      failure
                    </span>
                  </div>
                </div>
                <div
                  class="Accordion--chevron"
                />
              </div>
              <div
                class="bp3-collapse Accordion--collapse"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(-undefinedpx);"
                />
              </div>
            </div>
          </div>
          <div
            class="Accordion--accordion"
          >
            <div
              class="Accordion--panel"
              data-open="false"
              data-testid="projectConnectorId-panel"
            >
              <div
                class="Accordion--summary"
                data-testid="projectConnectorId-summary"
              >
                <div
                  class=""
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main connectorName"
                      style="--text-line-clamp: 1;"
                    >
                      projectConnectorId
                    </p>
                    <span
                      class="connectorId"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="connectorIdentifierHolder"
                            tabindex="0"
                          >
                            <span>
                               
                              idLabel
                            </span>
                            <a
                              href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/projectConnectorId"
                              target="_blank"
                            >
                              <p
                                class="StyledProps--font StyledProps--main connectorIdentifier"
                              >
                                 
                                projectConnectorId
                              </p>
                            </a>
                          </div>
                        </span>
                      </span>
                    </span>
                    <span
                      class="StyledProps--font StyledProps--main status StyledProps--inline"
                      style="display: inline-flex; align-items: center;"
                    >
                      <span
                        class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red500"
                        icon="dot"
                      >
                        <svg
                          data-icon="dot"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            dot
                          </desc>
                          <path
                            d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      failure
                    </span>
                  </div>
                </div>
                <div
                  class="Accordion--chevron"
                />
              </div>
              <div
                class="bp3-collapse Accordion--collapse"
              >
                <div
                  aria-hidden="false"
                  class="bp3-collapse-body"
                  style="transform: translateY(-undefinedpx);"
                />
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/Connector1"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        Connector1
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerFailure"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          retry
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          close
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.continueToRunPipeline
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck renders property when has in progress checks 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 66.66666666666667%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.20641 2.70856C8.13476 2.75156 8.0631 2.76589 7.99145 2.76589C7.86246 2.76589 7.73348 2.69423 7.6475 2.57958C7.51852 2.36462 7.36087 2.17831 7.20323 1.992C7.04559 1.83436 7.05992 1.5764 7.21756 1.43309C7.3752 1.27544 7.63317 1.28978 7.77648 1.44742C7.97711 1.66239 8.16342 1.90602 8.32106 2.16398C8.45004 2.35028 8.39272 2.59392 8.20641 2.70856Z"
              />
              <path
                d="M5.98739 7.8679C6.56064 7.60994 7.07656 7.223 7.44917 6.7214C7.57815 6.54943 7.83611 6.50644 8.00809 6.64975C8.18006 6.77873 8.22306 7.03669 8.07974 7.20866C7.62115 7.81057 7.0049 8.29784 6.30268 8.61312C6.24535 8.64178 6.20236 8.64178 6.14503 8.64178C5.98739 8.64178 5.84408 8.5558 5.77242 8.39815C5.68643 8.19752 5.78675 7.95389 5.98739 7.8679Z"
              />
              <path
                d="M8.07816 5.40317C8.20714 4.93024 8.22147 4.42864 8.16415 3.95571C8.13548 3.74075 8.2788 3.54011 8.5081 3.51145C8.72306 3.48278 8.9237 3.6261 8.95236 3.8554C9.03835 4.44297 9.00969 5.03055 8.85204 5.61813C8.80905 5.80444 8.63708 5.91909 8.4651 5.91909C8.43644 5.91909 8.39345 5.91909 8.36478 5.90476C8.14982 5.8331 8.02083 5.61813 8.07816 5.40317Z"
              />
              <path
                d="M5.74837 0.857647C5.6886 0.652472 5.80647 0.437689 6.01165 0.377916C6.21683 0.318143 6.43161 0.436016 6.49138 0.641192C6.55115 0.846367 6.43328 1.06115 6.22811 1.12092C6.02293 1.1807 5.80815 1.06282 5.74837 0.857647Z"
              />
              <path
                d="M4.52451 0C4.73948 0 4.92578 0.171974 4.92578 0.401274C4.92578 0.616242 4.75381 0.802547 4.52451 0.802547C2.48948 0.802547 0.827058 2.46497 0.827058 4.5C0.827058 4.88694 0.884382 5.27388 1.01336 5.66082C1.08502 5.87579 0.97037 6.09076 0.755402 6.16242C0.712409 6.17675 0.669415 6.17675 0.626421 6.17675C0.454447 6.17675 0.296803 6.07643 0.25381 5.90445C0.0961666 5.44586 0.0245099 4.97293 0.0245099 4.5C0.0245099 2.0207 2.04521 0 4.52451 0Z"
              />
              <path
                d="M1.80158 6.99381C2.50381 7.75336 3.49266 8.19763 4.52451 8.19763C4.73948 8.19763 4.92578 8.3696 4.92578 8.5989C4.92578 8.81387 4.75381 9.00017 4.52451 9.00017C3.27769 9.00017 2.05954 8.46992 1.214 7.53839C1.07069 7.38075 1.07069 7.12279 1.24266 6.97947C1.40031 6.82183 1.64394 6.83616 1.80158 6.99381Z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/Connector1"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        Connector1
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main connectorName accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              Connector1
            </p>
            <span
              class="connectorId"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="connectorIdentifierHolder"
                    tabindex="0"
                  >
                    <span>
                       
                      idLabel
                    </span>
                    <a
                      href="/account/accId/ci/orgs/orgId/projects/projId/setup/resources/connectors/Connector1"
                      target="_blank"
                    >
                      <p
                        class="StyledProps--font StyledProps--main connectorIdentifier"
                      >
                         
                        Connector1
                      </p>
                    </a>
                  </div>
                </span>
              </span>
            </span>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              in progress
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerInProgress"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.skipCheckBtn
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main footerSmallText"
      >
        pre-flight-check.skipCheckInfo
      </p>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck renders property when return all success checks 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 100%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              test.steps.step1.url
            </p>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              pipeline.stages.s2.execution.steps.step2.url
            </p>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main listRow"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main inputFqn accordionPaddingCorrection"
              style="--text-line-clamp: 1;"
            >
              pipeline.stages.s3.execution.steps.step3.url
            </p>
            <span
              class="StyledProps--font StyledProps--main status StyledProps--inline"
              style="display: inline-flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dot StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green500"
                icon="dot"
              >
                <svg
                  data-icon="dot"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    dot
                  </desc>
                  <path
                    d="M8 5a3 3 0 100 6 3 3 0 100-6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              success
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerFailure"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          retry
        </span>
      </button>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          close
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          pre-flight-check.continueToRunPipeline
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PreflightCheck see if RETRY works: loading state after retry click 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main preFlightCheckContainer StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main headLine"
    >
      <span
        class="title"
      >
        pre-flight-check.preFlightCheckTitle
      </span>
    </div>
    <div
      class="bp3-progress-bar bp3-intent-success"
    >
      <div
        class="bp3-progress-meter"
        style="width: 0%;"
      />
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main sectionsWrapper"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main sectionLabelsWrapper"
      >
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-bold"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.20641 2.70856C8.13476 2.75156 8.0631 2.76589 7.99145 2.76589C7.86246 2.76589 7.73348 2.69423 7.6475 2.57958C7.51852 2.36462 7.36087 2.17831 7.20323 1.992C7.04559 1.83436 7.05992 1.5764 7.21756 1.43309C7.3752 1.27544 7.63317 1.28978 7.77648 1.44742C7.97711 1.66239 8.16342 1.90602 8.32106 2.16398C8.45004 2.35028 8.39272 2.59392 8.20641 2.70856Z"
              />
              <path
                d="M5.98739 7.8679C6.56064 7.60994 7.07656 7.223 7.44917 6.7214C7.57815 6.54943 7.83611 6.50644 8.00809 6.64975C8.18006 6.77873 8.22306 7.03669 8.07974 7.20866C7.62115 7.81057 7.0049 8.29784 6.30268 8.61312C6.24535 8.64178 6.20236 8.64178 6.14503 8.64178C5.98739 8.64178 5.84408 8.5558 5.77242 8.39815C5.68643 8.19752 5.78675 7.95389 5.98739 7.8679Z"
              />
              <path
                d="M8.07816 5.40317C8.20714 4.93024 8.22147 4.42864 8.16415 3.95571C8.13548 3.74075 8.2788 3.54011 8.5081 3.51145C8.72306 3.48278 8.9237 3.6261 8.95236 3.8554C9.03835 4.44297 9.00969 5.03055 8.85204 5.61813C8.80905 5.80444 8.63708 5.91909 8.4651 5.91909C8.43644 5.91909 8.39345 5.91909 8.36478 5.90476C8.14982 5.8331 8.02083 5.61813 8.07816 5.40317Z"
              />
              <path
                d="M5.74837 0.857647C5.6886 0.652472 5.80647 0.437689 6.01165 0.377916C6.21683 0.318143 6.43161 0.436016 6.49138 0.641192C6.55115 0.846367 6.43328 1.06115 6.22811 1.12092C6.02293 1.1807 5.80815 1.06282 5.74837 0.857647Z"
              />
              <path
                d="M4.52451 0C4.73948 0 4.92578 0.171974 4.92578 0.401274C4.92578 0.616242 4.75381 0.802547 4.52451 0.802547C2.48948 0.802547 0.827058 2.46497 0.827058 4.5C0.827058 4.88694 0.884382 5.27388 1.01336 5.66082C1.08502 5.87579 0.97037 6.09076 0.755402 6.16242C0.712409 6.17675 0.669415 6.17675 0.626421 6.17675C0.454447 6.17675 0.296803 6.07643 0.25381 5.90445C0.0961666 5.44586 0.0245099 4.97293 0.0245099 4.5C0.0245099 2.0207 2.04521 0 4.52451 0Z"
              />
              <path
                d="M1.80158 6.99381C2.50381 7.75336 3.49266 8.19763 4.52451 8.19763C4.73948 8.19763 4.92578 8.3696 4.92578 8.5989C4.92578 8.81387 4.75381 9.00017 4.52451 9.00017C3.27769 9.00017 2.05954 8.46992 1.214 7.53839C1.07069 7.38075 1.07069 7.12279 1.24266 6.97947C1.40031 6.82183 1.64394 6.83616 1.80158 6.99381Z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingPipelineInputs
        </span>
        <span
          class="StyledProps--font StyledProps--main sectionLabelText StyledProps--inline StyledProps--font-weight-light"
          style="display: inline-flex; align-items: center;"
        >
          <span
            class="bp3-icon StyledProps--main spinningIcon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-grey400"
            data-icon="pending"
          >
            <svg
              height="16"
              viewBox="0 0 9 9"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.20641 2.70856C8.13476 2.75156 8.0631 2.76589 7.99145 2.76589C7.86246 2.76589 7.73348 2.69423 7.6475 2.57958C7.51852 2.36462 7.36087 2.17831 7.20323 1.992C7.04559 1.83436 7.05992 1.5764 7.21756 1.43309C7.3752 1.27544 7.63317 1.28978 7.77648 1.44742C7.97711 1.66239 8.16342 1.90602 8.32106 2.16398C8.45004 2.35028 8.39272 2.59392 8.20641 2.70856Z"
              />
              <path
                d="M5.98739 7.8679C6.56064 7.60994 7.07656 7.223 7.44917 6.7214C7.57815 6.54943 7.83611 6.50644 8.00809 6.64975C8.18006 6.77873 8.22306 7.03669 8.07974 7.20866C7.62115 7.81057 7.0049 8.29784 6.30268 8.61312C6.24535 8.64178 6.20236 8.64178 6.14503 8.64178C5.98739 8.64178 5.84408 8.5558 5.77242 8.39815C5.68643 8.19752 5.78675 7.95389 5.98739 7.8679Z"
              />
              <path
                d="M8.07816 5.40317C8.20714 4.93024 8.22147 4.42864 8.16415 3.95571C8.13548 3.74075 8.2788 3.54011 8.5081 3.51145C8.72306 3.48278 8.9237 3.6261 8.95236 3.8554C9.03835 4.44297 9.00969 5.03055 8.85204 5.61813C8.80905 5.80444 8.63708 5.91909 8.4651 5.91909C8.43644 5.91909 8.39345 5.91909 8.36478 5.90476C8.14982 5.8331 8.02083 5.61813 8.07816 5.40317Z"
              />
              <path
                d="M5.74837 0.857647C5.6886 0.652472 5.80647 0.437689 6.01165 0.377916C6.21683 0.318143 6.43161 0.436016 6.49138 0.641192C6.55115 0.846367 6.43328 1.06115 6.22811 1.12092C6.02293 1.1807 5.80815 1.06282 5.74837 0.857647Z"
              />
              <path
                d="M4.52451 0C4.73948 0 4.92578 0.171974 4.92578 0.401274C4.92578 0.616242 4.75381 0.802547 4.52451 0.802547C2.48948 0.802547 0.827058 2.46497 0.827058 4.5C0.827058 4.88694 0.884382 5.27388 1.01336 5.66082C1.08502 5.87579 0.97037 6.09076 0.755402 6.16242C0.712409 6.17675 0.669415 6.17675 0.626421 6.17675C0.454447 6.17675 0.296803 6.07643 0.25381 5.90445C0.0961666 5.44586 0.0245099 4.97293 0.0245099 4.5C0.0245099 2.0207 2.04521 0 4.52451 0Z"
              />
              <path
                d="M1.80158 6.99381C2.50381 7.75336 3.49266 8.19763 4.52451 8.19763C4.73948 8.19763 4.92578 8.3696 4.92578 8.5989C4.92578 8.81387 4.75381 9.00017 4.52451 9.00017C3.27769 9.00017 2.05954 8.46992 1.214 7.53839C1.07069 7.38075 1.07069 7.12279 1.24266 6.97947C1.40031 6.82183 1.64394 6.83616 1.80158 6.99381Z"
              />
            </svg>
          </span>
          pre-flight-check.verifyingConnectors
        </span>
      </div>
      <div
        class="divider"
      />
      <div
        class="sectionPanelWrapper"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        />
      </div>
    </div>
    <div
      class="footerInProgress"
    >
      <button
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-button-text"
        >
          pre-flight-check.skipCheckBtn
        </span>
      </button>
      <p
        class="StyledProps--font StyledProps--main footerSmallText"
      >
        pre-flight-check.skipCheckInfo
      </p>
    </div>
  </div>
</div>
`;
